remove moment timezone; align event dates and times; fix copy and add requestability for cities

--- a/styles/modules/_events.scss
+++ b/styles/modules/_events.scss
@@ -18,6 +18,14 @@
   }
 }
 
+.event-time {
+  span {
+    min-width: 110px;
+    text-align: right;
+    display: inline-block;
+  }
+}
+
 .show-more {
   font-size: 0.8em;
   cursor: pointer;
